.github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,35 +52,38 @@ jobs:
             ${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-pip-
             ${{ runner.os }}-pip-
 
-      - name: Forbered CI-kravfiler (fix pandas_ta → pandas-ta)
+      - name: Forbered CI-kravfiler (fix pandas_ta → pandas-ta>=0.3.14b0)
         run: |
           set -e
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            sed -E -i 's/^[[:space:]]*pandas_ta/pandas-ta/' requirements.ci.txt || true
+            # erstat pakke-navn og slap version-pin løs til >=0.3.14b0
+            sed -E -i 's/^[[:space:]]*pandas_ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements.ci.txt || true
+            sed -E -i 's/^[[:space:]]*pandas-ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements.ci.txt || true
             echo "== requirements.ci.txt =="; cat requirements.ci.txt
           fi
           if [ -f requirements-dev.txt ]; then
             cp requirements-dev.txt requirements-dev.ci.txt
-            sed -E -i 's/^[[:space:]]*pandas_ta/pandas-ta/' requirements-dev.ci.txt || true
+            sed -E -i 's/^[[:space:]]*pandas_ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements-dev.ci.txt || true
+            sed -E -i 's/^[[:space:]]*pandas-ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements-dev.ci.txt || true
             echo "== requirements-dev.ci.txt =="; cat requirements-dev.ci.txt
           fi
 
-      - name: Installer pip & afhængigheder
+      - name: Installer pip & afhængigheder (tillad prereleases)
         run: |
           set -e
           python -m pip install -U pip wheel setuptools
-          if [ -f requirements.ci.txt ]; then pip install -r requirements.ci.txt; fi
-          if [ -f requirements-dev.ci.txt ]; then pip install -r requirements-dev.ci.txt; fi
-          # Fallback: hvis pandas-ta ikke er installeret via kravfilerne
+          if [ -f requirements.ci.txt ]; then pip install --pre -r requirements.ci.txt; fi
+          if [ -f requirements-dev.ci.txt ]; then pip install --pre -r requirements-dev.ci.txt; fi
+          # Fallback specifikt for pandas-ta hvis den stadig mangler
           python - << 'PY' || true
           import importlib, subprocess, sys
           try:
               importlib.import_module("pandas_ta")
               print("pandas_ta import OK")
           except Exception:
-              print("Installerer pandas-ta fallback …")
-              subprocess.check_call([sys.executable, "-m", "pip", "install", "--pre", "pandas-ta==0.3.14b0"])
+              print("Installerer pandas-ta fallback fra GitHub …")
+              subprocess.check_call([sys.executable, "-m", "pip", "install", "git+https://github.com/twopirllc/pandas-ta@master"])
           PY
           # Sikkerhedsnet hvis dev-filen mangler:
           pip install pytest pytest-cov pytest-timeout || true
@@ -195,8 +198,9 @@ jobs:
           python -m pip install -U pip
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            sed -E -i 's/^[[:space:]]*pandas_ta/pandas-ta/' requirements.ci.txt || true
-            pip install -r requirements.ci.txt
+            sed -E -i 's/^[[:space:]]*pandas_ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements.ci.txt || true
+            sed -E -i 's/^[[:space:]]*pandas-ta([=<>!].*)?/pandas-ta>=0.3.14b0/' requirements.ci.txt || true
+            pip install --pre -r requirements.ci.txt
           fi
           pip install pytest || true
 
