--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,12 +52,12 @@ jobs:
             ${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-pip-
             ${{ runner.os }}-pip-
 
-      - name: Forbered CI-kravfiler
+      - name: Forbered CI-krav- og constraints-filer
         run: |
           set -e
+          # Kravfiler: fjern pandas_ta/pandas-ta for at undgå PyPI-udsving
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            # Fjern pandas-ta (både underscore og bindestreg) fra kravfilen for at undgå pip-stop
             sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements.ci.txt || true
             echo "== requirements.ci.txt =="; cat requirements.ci.txt
           fi
@@ -66,13 +66,36 @@ jobs:
             sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements-dev.ci.txt || true
             echo "== requirements-dev.ci.txt =="; cat requirements-dev.ci.txt
           fi
+          # Constraints: lås hjul-kompatible versioner til Py3.11
+          cat > constraints.ci.txt << 'C'
+          numpy==1.26.4
+          numba==0.61.0
+          llvmlite==0.44.0
+          C
+          echo "== constraints.ci.txt =="; cat constraints.ci.txt
 
-      - name: Installer pip & øvrige afhængigheder
+      - name: Preinstallér binære hjul for numba/llvmlite (+ numpy)
         run: |
           set -e
-          python -m pip install -U pip wheel setuptools
-          if [ -f requirements.ci.txt ]; then pip install --pre -r requirements.ci.txt; fi
-          if [ -f requirements-dev.ci.txt ]; then pip install --pre -r requirements-dev.ci.txt; fi
+          # Tving hjul (ingen sdist kompilering)
+          pip install --upgrade pip wheel setuptools
+          pip install --only-binary=:all: -c constraints.ci.txt \
+            "numpy==1.26.4" "llvmlite==0.44.0" "numba==0.61.0"
+          python - << 'PY'
+          import importlib
+          import sys
+          import numpy
+          print("numpy:", numpy.__version__)
+          for m in ("llvmlite","numba"):
+              importlib.import_module(m)
+              print(m, "OK")
+          PY
+
+      - name: Installer øvrige afhængigheder (med constraints)
+        run: |
+          set -e
+          if [ -f requirements.ci.txt ]; then pip install --pre -c constraints.ci.txt -r requirements.ci.txt; fi
+          if [ -f requirements-dev.ci.txt ]; then pip install --pre -c constraints.ci.txt -r requirements-dev.ci.txt; fi
           # Sikkerhedsnet hvis dev-filen mangler:
           pip install pytest pytest-cov pytest-timeout || true
           # Kun hvis noget kræver torch i tests (ignore fejl hvis ikke muligt):
@@ -196,13 +219,19 @@ jobs:
           python-version: "3.11"
           cache: "pip"
 
-      - name: Installer minimale afhængigheder
+      - name: Installer minimale afhængigheder (med constraints)
         run: |
-          python -m pip install -U pip
+          set -e
+          python -m pip install -U pip wheel setuptools
+          cat > constraints.ci.txt << 'C'
+          numpy==1.26.4
+          numba==0.61.0
+          llvmlite==0.44.0
+          C
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
             sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements.ci.txt || true
-            pip install --pre -r requirements.ci.txt
+            pip install --pre -c constraints.ci.txt -r requirements.ci.txt
           fi
           pip install pytest || true
 
