--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: ["**"]
   workflow_dispatch:
   schedule:
-    - cron: "5 1 * * *" # 01:05 UTC ≈ 03:05 Europe/Copenhagen (sommertid)
+    - cron: "5 1 * * *" # 01:05 UTC ≈ 03:05 DK (sommertid)
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -21,29 +21,20 @@ jobs:
       MPLBACKEND: Agg
       PYTHONUNBUFFERED: "1"
       CI: "true"
+      PIP_DISABLE_PIP_VERSION_CHECK: "1"
+      PIP_NO_INPUT: "1"
     steps:
       - name: Checkout kode
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.11 (bedre hjul-kompatibilitet)
+      - name: Setup Python 3.11
         id: setup-python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
-      - name: Verificér at Python 3.11 er aktiv
-        run: |
-          set -e
-          python -V
-          which python
-          python - << 'PY'
-          import sys
-          print("Running:", sys.version)
-          assert sys.version_info[:2] == (3, 11), "Forkert Python-version i PATH (forventer 3.11)"
-          PY
-
-      - name: Cache pip (ekstra, oveni setup-python cache)
+      - name: Cache pip (ekstra)
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
@@ -52,107 +43,94 @@ jobs:
             ${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-pip-
             ${{ runner.os }}-pip-
 
-      - name: Forbered CI-krav- og constraints-filer
+      - name: Forbered CI-kravfiler (fjern pandas-ta/pandas_ta linjer)
         run: |
           set -e
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements.ci.txt || true
+            # Fjern eventuelle linjer for pandas-ta eller pandas_ta (vi pre-installerer dem)
+            sed -E -i '/^[[:space:]]*(pandas-ta|pandas_ta)([^A-Za-z0-9._-].*)?$/d' requirements.ci.txt || true
             echo "== requirements.ci.txt =="; cat requirements.ci.txt
           fi
           if [ -f requirements-dev.txt ]; then
             cp requirements-dev.txt requirements-dev.ci.txt
-            sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements-dev.ci.txt || true
+            sed -E -i '/^[[:space:]]*(pandas-ta|pandas_ta)([^A-Za-z0-9._-].*)?$/d' requirements-dev.ci.txt || true
             echo "== requirements-dev.ci.txt =="; cat requirements-dev.ci.txt
           fi
-          cat > constraints.ci.txt << 'C'
-          numpy==1.26.4
-          numba==0.61.0
-          llvmlite==0.44.0
-          C
-          echo "== constraints.ci.txt =="; cat constraints.ci.txt
 
-      - name: Preinstallér binære hjul for numba/llvmlite (+ numpy)
+      - name: Installer base-værktøjer
         run: |
-          set -e
-          pip install --upgrade pip wheel setuptools
-          pip install --only-binary=:all: -c constraints.ci.txt \
-            "numpy==1.26.4" "llvmlite==0.44.0" "numba==0.61.0"
-          python - << 'PY'
-          import importlib, numpy
-          print("numpy:", numpy.__version__)
-          for m in ("llvmlite","numba"):
-              importlib.import_module(m)
-              print(m, "OK")
-          PY
-
-      - name: Installer øvrige afhængigheder (med constraints)
-        run: |
-          set -e
-          if [ -f requirements.ci.txt ]; then pip install --pre -c constraints.ci.txt -r requirements.ci.txt; fi
-          if [ -f requirements-dev.ci.txt ]; then pip install --pre -c constraints.ci.txt -r requirements-dev.ci.txt; fi
-          pip install pytest pytest-cov pytest-timeout || true
-          pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
+          python -m pip install -U pip wheel setuptools
           python -V
           pip -V
 
-      - name: Installer pandas-ta uden git (PyPI→codeload→zip)
-        env:
-          PIP_DEFAULT_TIMEOUT: "60"
+      - name: Installér numeric stack først (hjul)
+        run: |
+          # Numpy før alt andet, så build-deps kan finde det
+          pip install --only-binary=:all: numpy==1.26.4
+          # Undgå at bygge numba/llvmlite fra kilde
+          pip install --only-binary=:all: llvmlite==0.42.0 numba==0.59.1
+
+      - name: Installér pandas-ta (OpenBB-fork) + shim til import
         run: |
           set -e
-          python - << 'PY'
-          import sys, subprocess, importlib
-          def run(cmd: str) -> bool:
-              print(f"\n-> {cmd}")
+          # 1) Prøv at importere pandas_ta; hvis det fejler, brug OpenBB-forken
+          python - <<'PY'
+          import importlib, sys, subprocess, site, pathlib
+          def has_pkg(name):
               try:
-                  subprocess.check_call(cmd, shell=True)
+                  importlib.import_module(name)
                   return True
-              except subprocess.CalledProcessError as e:
-                  print(f"FAILED ({e.returncode})")
+              except Exception:
                   return False
 
-          # 1) Prøv PyPI (tillad prereleases)
-          if run(f"{sys.executable} -m pip install --pre pandas-ta"):
-              pass
-          # 2) Prøv codeload ZIP (kræver ikke git)
-          elif run(f"{sys.executable} -m pip install 'pandas-ta @ https://codeload.github.com/twopirllc/pandas-ta/zip/refs/heads/master'"):
-              pass
-          # 3) Prøv GitHub ZIP-URL
-          elif run(f"{sys.executable} -m pip install 'pandas-ta @ https://github.com/twopirllc/pandas-ta/archive/refs/heads/master.zip'"):
-              pass
+          if not has_pkg("pandas_ta"):
+              print("pandas_ta ikke fundet – installerer pandas-ta-openbb…")
+              subprocess.check_call([sys.executable, "-m", "pip", "install", "pandas-ta-openbb==0.4.22"])
+              if not has_pkg("pandas_ta"):
+                  # Lav en lille shim, hvis modulet ikke eksporterer navnet direkte
+                  sp = site.getsitepackages()[0]
+                  shim = pathlib.Path(sp) / "pandas_ta.py"
+                  shim.write_text("from pandas_ta_openbb import *  # shim\n")
+                  print(f"Shim oprettet: {shim}")
+              else:
+                  print("pandas_ta kan importeres efter install.")
           else:
-              raise SystemExit("Kunne ikke installere pandas-ta fra nogen kilde")
-
-          import pandas_ta
-          print("pandas_ta import OK")
+              print("pandas_ta allerede tilgængelig.")
           PY
 
-      - name: Skriv .env til CI (testmode, ingen rigtige netkald)
+      - name: Installer projekt-afhængigheder
+        run: |
+          set -e
+          if [ -f requirements.ci.txt ]; then pip install -r requirements.ci.txt; fi
+          if [ -f requirements-dev.ci.txt ]; then pip install -r requirements-dev.ci.txt; fi
+          # Sikkerhedsnet
+          pip install pytest pytest-cov pytest-timeout || true
+          # CPU-only torch (ignorér fejl hvis ikke nødvendigt i tests)
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
+
+      - name: Skriv .env til CI (testmode)
         run: |
           cat > .env << 'EOF'
           TELEGRAM_TOKEN=dummy_token
           TELEGRAM_CHAT_ID=12345
           TELEGRAM_TESTMODE_ALWAYS_ENABLED=1
           LOG_DIR=logs
-          # Tving mock i evaluation/claude_eval.py (ingen eksternt API-kald i CI)
           ANTHROPIC_API_KEY=
           CLAUDE_MODEL=claude-3-haiku-20240307
           EOF
           printf "CI .env content:\n"; sed 's/\(ANTHROPIC_API_KEY=\).*/\1****/' .env
 
-      - name: Opret reports-mappe (hvis ikke findes)
+      - name: Opret reports-mappe
         run: mkdir -p reports
 
       - name: Kør pytest
-        run: |
-          pytest -q
+        run: pytest -q
 
-      - name: Kør main.py (smoke, må ikke vælte CI)
-        run: |
-          python main.py || true
+      - name: Kør main.py (smoke)
+        run: python main.py || true
 
-      - name: Fail-safe artefakter (garantér at de findes)
+      - name: Fail-safe artefakter
         run: |
           mkdir -p outputs graphs logs
           : > BotStatus.md
@@ -163,7 +141,7 @@ jobs:
             echo "timestamp,Navn,Balance" > outputs/performance_history.csv
           fi
 
-      - name: Tjek at centrale outputfiler findes
+      - name: Tjek outputfiler
         run: |
           test -f outputs/performance_history.csv
           test -f outputs/balance_trend.png
@@ -171,7 +149,7 @@ jobs:
           test -f CHANGELOG.md
           echo "✅ Alle vigtige outputfiler findes!"
 
-      - name: Upload artifacts (outputs, logs, grafer, coverage/htmlcov, junit)
+      - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -222,25 +200,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python 3.11
-        id: setup-python-nightly
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
-      - name: Installer minimale afhængigheder (med constraints)
+      - name: Installer minimale afhængigheder
         run: |
-          set -e
-          python -m pip install -U pip wheel setuptools
-          cat > constraints.ci.txt << 'C'
-          numpy==1.26.4
-          numba==0.61.0
-          llvmlite==0.44.0
-          C
+          python -m pip install -U pip
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            sed -E -i '/^[[:space:]]*(pandas_ta|pandas-ta)([=<>!].*)?([[:space:]]*)$/d' requirements.ci.txt || true
-            pip install --pre -c constraints.ci.txt -r requirements.ci.txt
+            sed -E -i '/^[[:space:]]*(pandas-ta|pandas_ta)([^A-Za-z0-9._-].*)?$/d' requirements.ci.txt || true
+            pip install -r requirements.ci.txt
           fi
           pip install pytest || true
 
