--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -7,103 +7,119 @@ on:
     - cron: "0 3 * * *"   # hver nat kl. 03:00 UTC
   workflow_dispatch:
 
+concurrency:
+  group: changelog-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   changelog:
-    runs-on: ubuntu-22.04   # Python 3.10 er tilgængelig her
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
     env:
-      MPLBACKEND: Agg         # headless Matplotlib
+      MPLBACKEND: Agg
       PYTHONUNBUFFERED: "1"
+      CI: "true"
+      # Map secrets -> env, så vi kan bruge env.* i if:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          fetch-depth: 0
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Installer pip & afhængigheder
-        run: |
-          python -m pip install -U pip wheel
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-          # Sikkerhedsnet hvis dev-filen mangler i en branch:
-          pip install pytest-cov pytest-timeout || true
-          # Tving CPU-hjul til PyTorch i Actions
-          pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
-          python -V
-          pip -V
+          python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements*.txt
+            bot/requirements*.txt
 
       - name: Print system info
         run: |
-          echo "Kører på runner: $RUNNER_OS"
-          python --version
+          echo "Runner: $RUNNER_OS"
+          python -V
+          pip -V
           git --version
 
-      # (Valgfrit) kør tests før changelog-opdatering
-      - name: Run tests
+      - name: Install dependencies (minimal)
+        run: |
+          python -m pip install -U pip wheel setuptools
+          if [ -f bot/requirements-changelog.txt ]; then
+            pip install -r bot/requirements-changelog.txt
+          elif [ -f requirements-dev.txt ]; then
+            pip install -r requirements-dev.txt
+          elif [ -f requirements.txt ]; then
+            pip install -r requirements.txt || true
+          fi
+          pip install python-dotenv requests || true
+
+      - name: Run tests (optional)
         run: |
           if [ -d "tests" ]; then
-            echo "Kører tests..."
-            pytest -vv
+            echo "Kører tests (hurtigt)…"
+            pytest -q || true
           else
-            echo "Ingen tests-mappe fundet, springer over."
+            echo "Ingen tests-mappe fundet – springer over."
+          fi
+
+      - name: Ensure CHANGELOG.md exists
+        run: |
+          if [ ! -f CHANGELOG.md ]; then
+            echo "# Changelog" > CHANGELOG.md
+            echo "" >> CHANGELOG.md
           fi
 
       - name: Run update_changelog.py
-        run: python bot/update_changelog.py
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          python bot/update_changelog.py
 
       - name: Check for CHANGELOG changes
         id: changelog
         run: |
-          if git diff --quiet CHANGELOG.md; then
-            echo "changed=false" >> $GITHUB_OUTPUT
+          if git diff --quiet -- CHANGELOG.md; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
           else
-            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Set up Git user
-        if: steps.changelog.outputs.changed == 'true'
+        if: ${{ steps.changelog.outputs.changed == 'true' }}
         run: |
           git config --global user.name "RhinoTh3Dhino"
           git config --global user.email "reno_123@live.dk"
 
       - name: Commit and push CHANGELOG.md
-        if: steps.changelog.outputs.changed == 'true'
+        if: ${{ steps.changelog.outputs.changed == 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          set -e
+          BRANCH="$(git rev-parse --abbrev-ref HEAD)"
           git add CHANGELOG.md
           if git diff --cached --quiet; then
             echo "Ingen ændringer at committe."
           else
-            git commit -m Auto-update CHANGELOG.md
-            BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            git pull --autostash --rebase origin "$BRANCH"
+            git commit -m "Auto-update CHANGELOG.md [skip ci]"
+            git pull --rebase --autostash origin "$BRANCH" || true
             git push origin "$BRANCH"
           fi
 
       - name: Send Telegram notification
-        if: steps.changelog.outputs.changed == 'true'
+        # Brug env.* i stedet for secrets.* i if for at gøre lintern glad
+        if: ${{ steps.changelog.outputs.changed == 'true' && env.TELEGRAM_TOKEN != '' && env.TELEGRAM_CHAT_ID != '' }}
         uses: appleboy/telegram-action@v0.1.1
         with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
+          to: ${{ env.TELEGRAM_CHAT_ID }}
+          token: ${{ env.TELEGRAM_TOKEN }}
           message: "✅ CHANGELOG.md er automatisk opdateret og committet! 🚀"
 
       - name: Done summary
-        run: echo "✅ Workflow gennemført - se Telegram for besked hvis der var ændringer."
+        run: echo "✅ Auto Update Changelog gennemført – se artifacts/logs (og Telegram hvis sat op)."
