--- a/pytest.ini
+++ b/pytest.ini
@@ -31,6 +31,7 @@ markers =
     integ: Integrationstests (end-to-end)
     gui: GUI-relaterede tests
     e2e: Fuld end-to-end pipeline-smoke (producerer artefakter)
+    contract: Kontrakt-tests der kan kalde eksterne API'er (fx PnL/Telegram)
 
 # Standard-flags
 addopts =
