feat(streaming): MVP (quiet logs, indicators, parquet schema, tests)

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,8 +25,12 @@ norecursedirs =
     backups
     mlruns
 
+# Asyncio-integration (kræver pytest-asyncio >= 0.20)
+asyncio_mode = auto
+
 # Markers (brug --strict-markers for at fange stavefejl)
 markers =
+    asyncio: mark test as asyncio-based
     slow: Langsomme tests (kan skippes i hurtige kørsler)
     integ: Integrationstests (end-to-end)
     gui: GUI-relaterede tests
