--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [ "**" ]
+    branches: ["**"]
   pull_request:
-    branches: [ "**" ]
+    branches: ["**"]
   workflow_dispatch:
   schedule:
-    - cron: "5 1 * * *"  # 01:05 UTC â‰ˆ 03:05 DK (sommertid)
+    - cron: "5 1 * * *"  # 01:05 UTC ≈ 03:05 DK (sommertid)
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -23,15 +23,16 @@ jobs:
       CI: "true"
       PIP_DISABLE_PIP_VERSION_CHECK: "1"
       PIP_NO_INPUT: "1"
+
     steps:
       - name: Checkout kode
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.11
+      - name: Setup Python 3.10
         id: setup-python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
           cache: "pip"
 
       - name: Cache pip (ekstra)
@@ -43,12 +44,12 @@ jobs:
             ${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-pip-
             ${{ runner.os }}-pip-
 
-      - name: Forbered CI-kravfiler (fjern pandas-ta/pandas_ta linjer)
+      - name: Forbered CI-kravfiler (fjern evt. pandas-ta linjer)
         run: |
           set -e
           if [ -f requirements.txt ]; then
             cp requirements.txt requirements.ci.txt
-            # Fjern eventuelle linjer for pandas-ta eller pandas_ta (vi pre-installerer dem)
+            # fjern evt. pandas-ta/pandas_ta (vi håndterer separat)
             sed -E -i '/^[[:space:]]*(pandas-ta|pandas_ta)([^A-Za-z0-9._-].*)?$/d' requirements.ci.txt || true
             echo "== requirements.ci.txt =="; cat requirements.ci.txt
           fi
@@ -58,37 +59,32 @@ jobs:
             echo "== requirements-dev.ci.txt =="; cat requirements-dev.ci.txt
           fi
 
-      - name: Installer base-vÃ¦rktÃ¸jer
+      - name: Installer basetools
         run: |
           python -m pip install -U pip wheel setuptools
           python -V
           pip -V
 
-      - name: InstallÃ©r numeric stack fÃ¸rst (hjul)
+      - name: Installer numeric stack først (hjul)
         run: |
-          # Numpy fÃ¸r alt andet, sÃ¥ build-deps kan finde det
-          pip install --only-binary=:all: numpy==1.26.4
-          # UndgÃ¥ at bygge numba/llvmlite fra kilde
-          pip install --only-binary=:all: llvmlite==0.42.0 numba==0.59.1
+          # Pins for kompatibilitet (mlflow 2.3 + Parquet)
+          pip install --only-binary=:all: 'numpy==1.26.4' 'pyarrow==11.0.0'
+          # Undgå at bygge numba/llvmlite fra kilde (hvis en dep bruger dem)
+          pip install --only-binary=:all: 'llvmlite==0.42.0' 'numba==0.59.1' || true
 
-      - name: InstallÃ©r pandas-ta (OpenBB-fork) + shim til import
+      - name: Installer pandas-ta (OpenBB-fork) + shim (kun hvis nødvendigt)
         run: |
-          set -e
-          # 1) PrÃ¸v at importere pandas_ta; hvis det fejler, brug OpenBB-forken
           python - <<'PY'
           import importlib, sys, subprocess, site, pathlib
           def has_pkg(name):
               try:
-                  importlib.import_module(name)
-                  return True
+                  importlib.import_module(name); return True
               except Exception:
                   return False
-
           if not has_pkg("pandas_ta"):
-              print("pandas_ta ikke fundet â€“ installerer pandas-ta-openbbâ€¦")
+              print("pandas_ta ikke fundet – installerer pandas-ta-openbb…")
               subprocess.check_call([sys.executable, "-m", "pip", "install", "pandas-ta-openbb==0.4.22"])
               if not has_pkg("pandas_ta"):
-                  # Lav en lille shim, hvis modulet ikke eksporterer navnet direkte
                   sp = site.getsitepackages()[0]
                   shim = pathlib.Path(sp) / "pandas_ta.py"
                   shim.write_text("from pandas_ta_openbb import *  # shim\n")
@@ -96,18 +92,28 @@ jobs:
               else:
                   print("pandas_ta kan importeres efter install.")
           else:
-              print("pandas_ta allerede tilgÃ¦ngelig.")
+              print("pandas_ta allerede tilgængelig.")
           PY
 
-      - name: Installer projekt-afhÃ¦ngigheder
+      - name: Installer projekt-afhængigheder
         run: |
           set -e
           if [ -f requirements.ci.txt ]; then pip install -r requirements.ci.txt; fi
           if [ -f requirements-dev.ci.txt ]; then pip install -r requirements-dev.ci.txt; fi
-          # Sikkerhedsnet
-          pip install pytest pytest-cov pytest-timeout || true
-          # CPU-only torch (ignorÃ©r fejl hvis ikke nÃ¸dvendigt i tests)
+          # Sikkerhedsnet for test-tools (inkl. asyncio-plugin)
+          pip install pytest pytest-cov pytest-timeout pytest-asyncio || true
+          # CPU-only torch (ok at ignorere fejl hvis ikke brugt i tests)
           pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
+          echo "--- Versions ---"
+          python - <<'PY'
+          import importlib
+          for name in ("pydantic","numpy","pandas","pyarrow","websockets","pytest","pytest_asyncio","mlflow"):
+              try:
+                  m = importlib.import_module(name); print(f"{name}: {getattr(m,'__version__','?')}")
+              except Exception as e:
+                  print(f"{name}: <missing> ({e})")
+          PY
+          pip check || true
 
       - name: Skriv .env til CI (testmode)
         run: |
@@ -124,10 +130,10 @@ jobs:
       - name: Opret reports-mappe
         run: mkdir -p reports
 
-      - name: KÃ¸r pytest
+      - name: Kør pytest
         run: pytest -q
 
-      - name: KÃ¸r main.py (smoke)
+      - name: Kør main.py (smoke)
         run: python main.py || true
 
       - name: Fail-safe artefakter
@@ -147,7 +153,7 @@ jobs:
           test -f outputs/balance_trend.png
           test -f BotStatus.md
           test -f CHANGELOG.md
-          echo "âœ… Alle vigtige outputfiler findes!"
+          echo "✅ Alle vigtige outputfiler findes!"
 
       - name: Upload artifacts
         if: always()
@@ -199,13 +205,13 @@ jobs:
       - name: Checkout kode
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.11
+      - name: Setup Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
           cache: "pip"
 
-      - name: Installer minimale afhÃ¦ngigheder
+      - name: Installer minimale afhængigheder
         run: |
           python -m pip install -U pip
           if [ -f requirements.txt ]; then
