--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ pyarrow==11.0.0         # kompatibel med mlflow>=2.0,<2.4
 
 # --- Testing ---
 pytest>=8.4,<9
+pytest-asyncio==0.23.8  # kræves til @pytest.mark.asyncio tests (pytest 8 / Py3.11)
 pytest-cov==6.2.1
 pytest-timeout==2.3.1
 coverage==7.5.3
